# rust-client

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: example.rs  quick_start.rs
proto/: matrix_service.proto
src/: client.rs  error.rs  lib.rs  models.rs
