[package]
name = "casper-vdb"
version = "0.1.0"
edition = "2024"
description = "Client library for Casper Vector Database"
authors = ["Alexander Ryzhikov <makseljoinb@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/casper-vdb/rust-client"
keywords = ["vector", "database", "client", "search"]
categories = ["database", "web-programming::http-client"]
build = "build.rs"

[lib]
name = "casper_client"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.4"
tonic = { version = "0.12", features = ["transport"] }
tokio-stream = "0.1"
prost = "0.13"

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"
